# musicvids

./: .gitignore  CHANNELS_WIDGET_DELIVERY.md  IMPLEMENTATION_DETAILS.md  README.md  YOUTUBE_CHANNELS_IMPLEMENTATION.md  YOUTUBE_SYNC_INVESTIGATION.md
app_flutter/: README.md  pubspec.yaml
app_flutter/android/app/: build.gradle.kts
app_flutter/ios/Runner/: Info.plist
app_flutter/ios/Runner.xcodeproj/: project.pbxproj
app_flutter/lib/: main.dart
app_flutter/linux/: CMakeLists.txt
app_flutter/test/: widget_test.dart
app_flutter/web/: index.html  manifest.json
app_flutter/windows/: CMakeLists.txt
backend_python/: README.md  pyproject.toml  start_backend.sh
backend_python/app/: main.py
backend_python/app/api/routes/: projects.py  settings.py  workflow.py
backend_python/app/core/: config.py
backend_python/app/integrations/: midjourney_client.py  suno_client.py
backend_python/app/models/: schemas.py
backend_python/app/pipeline/: audio_analysis.py  ffmpeg_builder.py  prompt_generator.py  transition_engine.py
backend_python/app/services/: project_store.py  settings_store.py  upload_service.py  workflow_runner.py
backend_python/musicvids_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend_python/tests/: test_transition_engine.py
bckup/lib/: main.dart
docs/: architecture.md
projects/biblestories/: project.json
projects/example_project/: project.json
scripts/: install_deps_xubuntu.sh  installer.sh  package_linux_deb.sh  run_backend.sh  run_flutter.sh  setup.sh
shared/: settings.json
sunoapi/: pnpm-lock.yaml
(+22 files in other folders)
