[project]
name = "musicvids-backend"
version = "0.1.0"
description = "Local-first AI music video studio backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "tenacity>=8.2",
  "ffmpeg-python>=0.2.0",
  "numpy>=1.26",
  "librosa>=0.10",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
